--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
         }
     ],
     "require": {
-        "php": ">=5.4.0",
-        "illuminate/support": "4.*|5.*"
+        "php": "^7.2.5",
+        "illuminate/support": "^7"
     },
     "require-dev": {
         "phpunit/phpunit": "4.*",
