--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,12 @@
         }
     ],
     "require": {
-        "php": "^7.2.5",
-        "illuminate/support": "^7"
+        "php": "^7.4 || ^8.0",
+        "illuminate/support": "4.*|5.*|6.*|7.*|8.*|9.*"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.*",
-        "illuminate/database": "4.*|5.*",
-        "symfony/process": "~2.3",
+        "phpunit/phpunit": "^9.3.3",
+        "illuminate/database": "4.*|5.*|6.*|7.*|8.*|9.*",
         "codeclimate/php-test-reporter": "dev-master"
     },
     "autoload": {
