--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,12 @@
         }
     ],
     "require": {
-        "php": "^7.4 || ^8.0",
-        "illuminate/support": "4.*|5.*|6.*|7.*|8.*|9.*"
+        "php": "^8.0",
+        "illuminate/support": "^9.0|^10.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.3.3",
-        "illuminate/database": "4.*|5.*|6.*|7.*|8.*|9.*",
-        "codeclimate/php-test-reporter": "dev-master"
+        "phpunit/phpunit": "^10.0",
+        "illuminate/database": "^9.0|^10.0"
     },
     "autoload": {
         "psr-4": {
