--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,12 @@
         }
     ],
     "require": {
-        "php": "^8.0",
-        "illuminate/support": "^9.0|^10.0"
+        "php": "^8.3",
+        "illuminate/support": "^11.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^10.0",
-        "illuminate/database": "^9.0|^10.0"
+        "phpunit/phpunit": "^11.0",
+        "illuminate/database": "^11.0"
     },
     "autoload": {
         "psr-4": {
